[project]
name = "nycu-dlcv-image-restoration"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.8.2",
    "gdown>=6.0.0",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-image>=0.26.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "tqdm>=4.67.3",
    "wandb>=0.27.0",
]
